FF and Chrome specific - Issue List displayed without a scrollbar, when the dialog opened after login #244

--- a/src/main/resources/assets/styles/publish/issue-list-dialog.less
+++ b/src/main/resources/assets/styles/publish/issue-list-dialog.less
@@ -1,5 +1,9 @@
 .issue-list-dialog {
 
+  .modal-dialog-body {
+    overflow: auto;
+  }
+
   .docked-panel {
     width: auto;
     box-shadow: none;
